# cmake_Test

./: .gitignore  README.md
CMake_test1/: CMakeLists.txt
CMake_test1/HelloWorld/: CMakeLists.txt  helloworld.cpp  helloworld.h  helloworldConfig.h
CMake_test1/MyMathFunctions/: CMakeLists.txt  MathFunctions.cpp
